--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
+            position: relative;
         }
         h1 {
             text-align: center;
@@ -39,8 +40,26 @@
         }
         .particles {
             position: absolute;
+            top: 0;
+            left: 0;
             z-index: -1;
             pointer-events: none;
+            background-color: rgba(0, 0, 0, 0.7); /* Added dark background */
+        }
+        button {
+            margin-top: 10px;
+            display: block;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            background-color: #4CAF50;
+            color: white;
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+        button:hover {
+            background-color: #45a049;
         }
     </style>
 </head>
@@ -49,21 +68,20 @@
         <h1>Clyde - Discord AI Chatbot</h1>
         <div class="column">
             <div class="perk">24/7 Chat Availability with instant responses.</div>
-           <img src="instantresponse.png" width=500 height=200
+            <img src="instantresponse.png" width="500" height="200">
         </div>
         <div class="column">
-            <div class="perk">Manage your server prefrences with a user friendly control panel.</div>
-            <img src="panel.png" width=300 height=300>
+            <div class="perk">Manage your server preferences with a user-friendly control panel.</div>
+            <img src="panel.png" width="300" height="300">
         </div>
         <div class="column">
-            <div class="perk">Customize your profile, memories and more.</div>
-            <img src="userpanel.png" width=300 height=300>
+            <div class="perk">Customize your profile, memories, and more.</div>
+            <img src="userpanel.png" width="300" height="300">
         </div>
         <canvas class="particles"></canvas>
         <a href="https://discord.com/oauth2/authorize?client_id=1180139171852058664&permissions=67584&scope=bot"><button>Add to server</button></a><br><a href="https://shapes.inc/poodle-cylde/server/settings/"><button>Server dashboard</button></a><br><a href="https://shapes.inc/poodle-cylde/user/memory"><button>User Memory Dashboard</button></a><a href="https://shapes.inc/poodle-cylde/user/profile"><button>Profile settings</button></a>
     </div>
     <script>
-        // Particle effect
         const canvas = document.querySelector('.particles');
         const ctx = canvas.getContext('2d');
         canvas.width = window.innerWidth;
@@ -89,7 +107,7 @@
                 const y = mouse.y + Math.sin(angle) * radius;
                 ctx.beginPath();
                 ctx.arc(x, y, 2, 0, Math.PI * 2);
-                ctx.fillStyle = 'rgba(255, 0, 0, 0.6)';
+                ctx.fillStyle = 'rgba(255, 255, 255, 0.6)'; // Changed particle color to white
                 ctx.fill();
             }
             requestAnimationFrame(draw);
