--- a/index.html
+++ b/index.html
@@ -13,23 +13,24 @@
         }
         .container {
             max-width: 1200px;
-            margin: 0 auto;
+            margin: 50px auto; /* Centering the container */
             padding: 20px;
             position: relative;
+            text-align: center; /* Centering text */
         }
         h1 {
-            text-align: center;
-            color: #333;
+            color: #444; /* Changed title color */
         }
         .column {
-            width: 33.33%;
-            float: left;
-            padding: 20px;
+            width: calc(33.33% - 20px);
+            margin: 10px;
+            display: inline-block;
+            vertical-align: top;
             box-sizing: border-box;
             transition: transform 0.3s;
         }
         .column:hover {
-            transform: scale(1.1);
+            transform: scale(1.05); /* Slightly increased scale on hover */
         }
         .perk {
             background-color: #fff;
@@ -44,11 +45,12 @@
             left: 0;
             z-index: -1;
             pointer-events: none;
-            background-color: rgba(0, 0, 0, 0.7); /* Added dark background */
+            background-color: rgba(0, 0, 0, 0.7);
+            width: 100%; /* Filling the width */
+            height: 100%; /* Filling the height */
         }
         button {
-            margin-top: 10px;
-            display: block;
+            margin: 10px;
             padding: 10px 20px;
             border: none;
             border-radius: 5px;
@@ -61,6 +63,13 @@
         button:hover {
             background-color: #45a049;
         }
+        .button-container {
+            margin-top: 20px;
+        }
+        img {
+            max-width: 100%; /* Ensuring images don't exceed container width */
+            height: auto;
+        }
     </style>
 </head>
 <body>
@@ -68,18 +77,23 @@
         <h1>Clyde - Discord AI Chatbot</h1>
         <div class="column">
             <div class="perk">24/7 Chat Availability with instant responses.</div>
-            <img src="instantresponse.png" width="500" height="200">
+            <img src="instantresponse.png" alt="Instant Response Image">
         </div>
         <div class="column">
             <div class="perk">Manage your server preferences with a user-friendly control panel.</div>
-            <img src="panel.png" width="300" height="300">
+            <img src="panel.png" alt="Control Panel Image">
         </div>
         <div class="column">
             <div class="perk">Customize your profile, memories, and more.</div>
-            <img src="userpanel.png" width="300" height="300">
+            <img src="userpanel.png" alt="User Panel Image">
         </div>
         <canvas class="particles"></canvas>
-        <a href="https://discord.com/oauth2/authorize?client_id=1180139171852058664&permissions=67584&scope=bot"><button>Add to server</button></a><br><a href="https://shapes.inc/poodle-cylde/server/settings/"><button>Server dashboard</button></a><br><a href="https://shapes.inc/poodle-cylde/user/memory"><button>User Memory Dashboard</button></a><a href="https://shapes.inc/poodle-cylde/user/profile"><button>Profile settings</button></a>
+        <div class="button-container">
+            <a href="https://discord.com/oauth2/authorize?client_id=1180139171852058664&permissions=67584&scope=bot"><button>Add to server</button></a>
+            <a href="https://shapes.inc/poodle-cylde/server/settings/"><button>Server dashboard</button></a>
+            <a href="https://shapes.inc/poodle-cylde/user/memory"><button>User Memory Dashboard</button></a>
+            <a href="https://shapes.inc/poodle-cylde/user/profile"><button>Profile settings</button></a>
+        </div>
     </div>
     <script>
         const canvas = document.querySelector('.particles');
@@ -107,7 +121,7 @@
                 const y = mouse.y + Math.sin(angle) * radius;
                 ctx.beginPath();
                 ctx.arc(x, y, 2, 0, Math.PI * 2);
-                ctx.fillStyle = 'rgba(255, 255, 255, 0.6)'; // Changed particle color to white
+                ctx.fillStyle = 'rgba(255, 255, 255, 0.6)';
                 ctx.fill();
             }
             requestAnimationFrame(draw);
