--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             text-align: center; /* Centering text */
         }
         h1 {
-            color: #444; /* Changed title color */
+            color: white; /* Changed title color to white */
         }
         .column {
             width: calc(33.33% - 20px);
@@ -69,23 +69,26 @@
         img {
             max-width: 100%; /* Ensuring images don't exceed container width */
             height: auto;
+            display: block; /* Remove white space beneath images */
+            margin: 0 auto; /* Center images */
         }
     </style>
 </head>
 <body>
     <div class="container">
         <h1>Clyde - Discord AI Chatbot</h1>
+        <img src="thumbnail.gif" alt="Thumbnail" width="300" height="150">
         <div class="column">
             <div class="perk">24/7 Chat Availability with instant responses.</div>
-            <img src="instantresponse.png" alt="Instant Response Image">
+            <img src="instantresponse.png" alt="Instant Response Image" width="300" height="150">
         </div>
         <div class="column">
             <div class="perk">Manage your server preferences with a user-friendly control panel.</div>
-            <img src="panel.png" alt="Control Panel Image">
+            <img src="panel.png" alt="Control Panel Image" width="300" height="150">
         </div>
         <div class="column">
             <div class="perk">Customize your profile, memories, and more.</div>
-            <img src="userpanel.png" alt="User Panel Image">
+            <img src="userpanel.png" alt="User Panel Image" width="300" height="150">
         </div>
         <canvas class="particles"></canvas>
         <div class="button-container">
@@ -101,33 +104,29 @@
         canvas.width = window.innerWidth;
         canvas.height = window.innerHeight;
 
-        const mouse = {
-            x: canvas.width / 2,
-            y: canvas.height / 2
-        };
-
-        window.addEventListener('mousemove', (e) => {
-            mouse.x = e.clientX;
-            mouse.y = e.clientY;
-        });
-
-        function draw() {
+        function drawParticles(mouseX, mouseY) {
             ctx.clearRect(0, 0, canvas.width, canvas.height);
             const numParticles = 50;
             for (let i = 0; i < numParticles; i++) {
                 const angle = Math.random() * Math.PI * 2;
                 const radius = Math.random() * 20 + 5;
-                const x = mouse.x + Math.cos(angle) * radius;
-                const y = mouse.y + Math.sin(angle) * radius;
+                const x = mouseX + Math.cos(angle) * radius;
+                const y = mouseY + Math.sin(angle) * radius;
                 ctx.beginPath();
                 ctx.arc(x, y, 2, 0, Math.PI * 2);
                 ctx.fillStyle = 'rgba(255, 255, 255, 0.6)';
                 ctx.fill();
             }
-            requestAnimationFrame(draw);
         }
 
-        draw();
+        window.addEventListener('mousemove', (e) => {
+            drawParticles(e.clientX, e.clientY);
+        });
+
+        window.addEventListener('resize', () => {
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
+        });
     </script>
 </body>
 </html>
