--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             text-align: center; /* Centering text */
         }
         h1 {
-            color: white; /* Changed title color to white */
+            color: black; /* Changed title color to white */
         }
         .column {
             width: calc(33.33% - 20px);
