--- a/index.html
+++ b/index.html
@@ -77,18 +77,18 @@
 <body>
     <div class="container">
         <h1>Clyde - Discord AI Chatbot</h1>
-        <div class="column">
+        <a href="https://discord.com/oauth2/authorize?client_id=1180139171852058664&permissions=67584&scope=bot"><div class="column">
             <div class="perk">24/7 Chat Availability with instant responses.</div>
             <img src="instantresponse.png" alt="Instant Response Image" width="300" height="150">
-        </div>
-        <div class="column">
+        </div></a>
+       <a href="https://shapes.inc/poodle-cylde/server/settings/"> <div class="column">
             <div class="perk">Manage your server preferences with a user-friendly control panel.</div>
             <img src="panel.png" alt="Control Panel Image" width="300" height="150">
-        </div>
-        <div class="column">
-            <div class="perk">Customize your profile, memories, and more.</div>
+        </div></a>
+        <a href="https://shapes.inc/poodle-cylde/user/profile"><div class="column">
+            <div class="perk">Customize your profile, <a href="https://shapes.inc/poodle-cylde/user/memory">memories</a>, and more.</div>
             <img src="userpanel.png" alt="User Panel Image" width="300" height="150">
-        </div>
+        </div></a>
         <div class="button-container">
             <a href="https://discord.com/oauth2/authorize?client_id=1180139171852058664&permissions=67584&scope=bot"><button>Add to server</button></a>
             <a href="https://shapes.inc/poodle-cylde/server/settings/"><button>Server dashboard</button></a>
