--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <img src="panel.png" alt="Control Panel Image" width="300" height="150">
         </div></a>
         <a href="https://shapes.inc/poodle-cylde/user/profile"><div class="column">
-            <div class="perk">Customize your profile, <a href="https://shapes.inc/poodle-cylde/user/memory">memories</a>, and more.</div>
+            <div class="perk">Customize your profile, memories, and more.</div>
             <img src="userpanel.png" alt="User Panel Image" width="300" height="150">
         </div></a>
         <div class="button-container">
