--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
             <div class="perk">Customize your profile, memories, and more.</div>
             <img src="userpanel.png" alt="User Panel Image" width="300" height="150">
         </div></a>
-        <a href="https://shapes.inc/poodle-cylde/user/profile"><div class="column">
+        <div class="column">
             <div class="perk">100% Free image generation.</div>
             <img src="panelimage.png" alt="Image" width="300" height="150">
-        </div></a>
+        </div>
         <div class="button-container">
             <a href="https://discord.com/oauth2/authorize?client_id=1180139171852058664&permissions=67584&scope=bot"><button>Add to server</button></a>
             <a href="https://shapes.inc/poodle-cylde/server/settings/"><button>Server dashboard</button></a>
